--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,20 +1,20 @@
 body {
     background-color: #2c0b47;
-  }
-  
-  div.generated-card {
+}
+
+div.generated-card {
     display: inline-block;
     width: 201px;
     height: 201px;
-  }
-  
-  div.generated-card > div.generated-card-inner {
+}
+
+div.generated-card > div.generated-card-inner {
     position: relative;
-  }
-  
-  div.generated-card
-    > div.generated-card-inner
-    > div.generated-card-background-one {
+}
+
+div.generated-card
+> div.generated-card-inner
+> div.generated-card-background-one {
     position: absolute;
     left: 26px;
     width: 148px;
@@ -22,41 +22,41 @@ body {
     background-repeat: no-repeat;
     background-size: 201px 201px;
     background-position: center center;
-    mask-image: url('/images/generated/cardmask.webp');
-    -webkit-mask-image: url('/images/generated/cardmask.webp');
+    /* mask-image: url('http://localhost:5173/resources/images/cardmask.webp'); */
+    /* -webkit-mask-image: url('http://localhost:5173/resources/images/generated/cardmask.webp'); */
     mask-size: 148px 201px;
     -webkit-mask-size: 148px 201px;
     mask-repeat: no-repeat;
     -webkit-mask-repeat: no-repeat;
-  }
-  
-  div.generated-card
-    > div.generated-card-inner
-    > div.generated-card-background-one
-    > div.generated-card-background-two {
+}
+
+div.generated-card
+> div.generated-card-inner
+> div.generated-card-background-one
+> div.generated-card-background-two {
     width: 148px;
     height: 201px;
     background-repeat: no-repeat;
     background-size: 201px 201px;
     background-position: center center;
-  }
-  
-  div.generated-card > div.generated-card-inner > div.generated-card-foreground {
+}
+
+div.generated-card > div.generated-card-inner > div.generated-card-foreground {
     position: absolute;
     width: 201px;
     height: 201px;
     background-repeat: no-repeat;
     background-size: 230px 230px;
     background-position: center center;
-  }
-  
-  div.generated-card
-    > div.generated-card-inner
-    > div.generated-card-foreground
-    > div.generated-card-logo {
+}
+
+div.generated-card
+> div.generated-card-inner
+> div.generated-card-foreground
+> div.generated-card-logo {
     margin-top: 120px;
     width: 201px;
     height: 102px;
     background-repeat: no-repeat;
     background-size: 201px 102px;
-  }
+}
